@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-07T08:12:14Z",
+  "timestamp" : "2022-06-08T16:11:37Z",
   "count_outdated" : 391,
   "uniques_outdated" : 20,
-  "count" : 407,
-  "uniques" : 24,
+  "count" : 408,
+  "uniques" : 25,
   "views" : [
     {
       "timestamp": "2022-05-30T00:00:00Z",
@@ -30,6 +30,13 @@
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 3,
       "count_minmax": [ 2, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
