@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 1,
   "views": [
     {
@@ -20,6 +20,11 @@
     {
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-08T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
